--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Teste Página</title>
+    <title>Finanças em Foco</title>
 </head>
 <body>
-    <nav class="navbar">
+    <header class="navbar">
         <div class="container">
             <h1 class="mf">
                 <span class="material-symbols-outlined">
                     currency_bitcoin
                     </span>
-                Minhas Finanças
+                Finanças em Foco
             </h1>
-            <a>
-                <button class="btn" id="btn">Despesas</button>
-                <button class="btn" id="btn">Gastos Mensais</button>
-                <button class="btn" id="btn">Saldo</button>
-            </a>
+            <div>
+                <button class="btn" id="btn"><a class="a" href="despesas.html">Despesas</a></button>
+                <button class="btn" id="btn"><a class="a" href="visãoGeral.html">Visão Geral</a></button>
+            </div>
         </div>
-    </nav>
+    </header>
 
-    <main class=" container mt-5 bg-black p-md-5 rounded-3 shadow lista-funcionarios" id="lf">
+    <main class=" container mt-5 bg-white p-md-5 rounded-3 shadow ff" id="ff">
         <h2 class="mb-5">Site Novo</h2>
     </main>
 
