--- a/index.html
+++ b/index.html
@@ -19,13 +19,39 @@
             <div>
                 <button class="btn" id="btn"><a class="a" href="despesas.html">Despesas</a></button>
                 <button class="btn" id="btn"><a class="a" href="visãoGeral.html">Visão Geral</a></button>
+                <button class="btn" id="btn"><a class="a" href="./faq.html">FAQ</a></button>
             </div>
         </div>
     </header>
 
-    <main class=" container mt-5 bg-white p-md-5 rounded-3 shadow ff" id="ff">
-        <h2 class="mb-5">Site Novo</h2>
+    <main class="container mt-5 p-md-5 rounded-3 shadow ff" id="ff">
+        <h2 class="mb-5">O que preciso saber?</h2>
+        <div class="navbar">
+            <div>
+                <img class="img shadow" src="./img/img-pf.jpg" alt="">
+                <p class="text-img mt-3">
+                    Bem-vindo ao nosso portal de gerenciamento financeiro, o seu parceiro confiável para manter 
+                    suas finanças em ordem. Aqui, você pode facilmente adicionar suas despesas diárias, proporcionando 
+                    um controle total sobre seus gastos. Com a funcionalidade de edição de salário, mantenha seus ganhos 
+                    atualizados e otimize seu orçamento. Acompanhe a soma dos gastos mensais de forma intuitiva, 
+                    permitindo uma visão clara e organizada das suas finanças. Seja o mestre do seu dinheiro, tome 
+                    decisões informadas e alcance suas metas financeiras.
+                </p>
+            </div>
+            <div>
+                <img class="img shadow" src="./img/img-pf2.jpg" alt="">
+                <p class="text-img mt-3">
+                    Adicione suas despesas de forma rápida e fácil, mantendo um registro detalhado das suas transações. Personalize seu 
+                    salário conforme necessário, garantindo que seu orçamento esteja sempre alinhado com seus objetivos 
+                    financeiros. Com a soma dos gastos mensais, tenha uma visão consolidada dos seus custos, facilitando 
+                    a identificação de áreas para economia. Esteja no controle total das suas finanças, com uma visão 
+                    geral abrangente que possibilita tomar decisões mais conscientes e alcançar uma vida financeira equilibrada.
+                </p>
+            </div>
+        </div>
     </main>
+
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
