--- a/visãoGeral.html
+++ b/visãoGeral.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="despesas.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <title>Visão Geral</title>
 </head>
 <body>
@@ -18,6 +20,7 @@
                     <a class="a" href="index.html">
                         Visão Geral
                     </a>
+
                 </h1>
             </div>
         </nav>
@@ -25,6 +28,8 @@
 
     <main class=" container mt-5 bg-white p-md-5 rounded-3 shadow despesas" id="dp">
         <h2 class="mb-5">Visão Geral</h2>
+        <p>Certifique-se de adicionar uma dispesa para nosso Software criar uma grafico para orimização de seu gerenciamento.</p>
+        <canvas id="donutChart" width="400" height="400"></canvas>
     </main>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
